# pysnark

./: .gitignore  .gitmodules  LICENSE.md  MANIFEST.in  README.md  TODO  TODO2  dist.sh  setup.py
.circleci/: config.yml
depends/python-libsnark/: CMakeLists.txt  LICENSE  README.md  io.i  io_zk.i  io_zkgg.i  libsnark.i  pb_variable.i  protoboard.i  protoboard_pub.i  r1cs.i  r1cs_gg_ppzksnark.i  r1cs_ppzksnark.i  swigtypes.i  variable.i
depends/python-libsnark/cmake/: FindPythonExtensions.cmake  libsnark.cmake
depends/python-libsnark/depends/libsnark/: CMakeLists.txt
depends/python-libsnark/depends/libsnark/depends/: CMakeLists.txt
depends/python-libsnark/depends/libsnark/depends/libff/depends/xbyak/: readme.txt
depends/python-libsnark/depends/libsnark/depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc
depends/python-libsnark/examples/: test.py
depends/qaptools/: CMakeLists.txt  Makefile  __init__.py  base.cpp  base.h  fft.cpp  fft.h  key.cpp  key.h  modp.cpp  modp.h  proof.cpp  proof.h  prove.cpp  prove.h  qap.cpp  qap.h  qap2key.cpp  qap2key.h  qapcoeffcache.cpp  qapgen.cpp  qapgenf.cpp  qapinput.cpp  qapprove.cpp  qapver.cpp  verify.cpp  verify.h
docs/: README.md  _config.yml
docs/_layouts/: default.html
examples/: bench.py  binarycircuit.py  binarycircuit_example.txt  branch-oblif.py  branch2.py  compare.py  cs  cs2  cube-qaptools.py  cube.py  cube_json.py  exp.py  factorial.py  hash.py  hash_string.py  index.html  kaplanmeier.py  manysquares.py  pysnark_ek  pysnark_vk  secretsanta.py  sigmacommit.py  sigmademo.py  sigmademo.sh  sigmasetup.py  snarkprofile.py  sudoku.py  test.py  test2.py  testarray.py  testcomm.py
examples/libsnark_examples/: cube.py  verify.py
examples/test/: TestPysnark.sol
notebooks/: test.ipynb
pysnark/: __init__.py  _libsnark.py  array.py  atexitmaybe.py  boolean.py  branching.py  fixedpoint.py  ggh_hash.py  gmpy.py  hash.py  linalg.py  nobackend.py  pack.py  poseidon_constants.py  poseidon_hash.py  qapver  runtime.py  snarkjsbackend.py  uselibsnark.py  useqaptools.py
pysnark/libsnark/: __init__.py  _libsnark.py  backend.py  backendgg.py  tosnarkjs.py  tosnarkjsgg.py
pysnark/qaptools/: Pairing.sol  backend.py  contract.py  import.py  options.py  qapsplit.py  runqapgen.py  runqapgenf.py  runqapinput.py  runqapprove.py  runqapver.py  schedule.py  testqap.py
pysnark/sigma/: __init__.py  base.py  prover.py  verifier.py
pysnark/zkinterface/: BilinearConstraint.py  Circuit.py  CircuitHeader.py  Command.py  ConstraintSystem.py  KeyValue.py  Message.py  R1CSConstraints.py  Root.py  Variables.py  Witness.py  backend.py  backendbellman.py  zkinterface.fbs  (+1 more)
test/: conftest.py  test_bench.py  test_branching.py  test_lincomb.py  test_lincomb_bitwise.py  test_lincomb_comparison.py  test_lincombbool.py  test_lincombfxp.py  test_poseidon_hash.py
